// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SpinnerControls /> responds correctly to button clicks 1`] = `
.interactions {
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #eaf2dd;
  padding: 24px;
}

.buttonsWrapper {
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-justify-content: center;
  justify-content: center;
  margin-bottom: 24px;
}

<div>
  <div
    class="interactions"
  >
    <div
      class="buttonsWrapper"
    >
      <div
        aria-label="outlined primary button group"
        class="MuiButtonGroup-root"
        role="group"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-outlinedPrimary"
          id="start"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Start
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-outlinedPrimary"
          id="stop"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Stop
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-outlinedPrimary"
          id="reset"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Reset
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <span
      class="MuiSlider-root MuiSlider-colorPrimary MuiSlider-marked"
      data-testid="internal-slider"
      id="slider"
      role="slider"
    >
      <span
        class="MuiSlider-rail"
      />
      <span
        class="MuiSlider-track"
        style="left: 0%; width: 5%;"
      />
      <input
        type="hidden"
        value="5"
      />
      <span
        class="MuiSlider-mark MuiSlider-markActive"
        data-index="0"
        style="left: 5%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel MuiSlider-markLabelActive"
        data-index="0"
        style="left: 5%;"
      >
        5%
      </span>
      <span
        class="MuiSlider-mark"
        data-index="1"
        style="left: 10%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel"
        data-index="1"
        style="left: 10%;"
      >
        10%
      </span>
      <span
        class="MuiSlider-mark"
        data-index="2"
        style="left: 25%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel"
        data-index="2"
        style="left: 25%;"
      >
        25%
      </span>
      <span
        class="MuiSlider-mark"
        data-index="3"
        style="left: 50%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel"
        data-index="3"
        style="left: 50%;"
      >
        50%
      </span>
      <span
        class="MuiSlider-mark"
        data-index="4"
        style="left: 75%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel"
        data-index="4"
        style="left: 75%;"
      >
        75%
      </span>
      <span
        class="MuiSlider-mark"
        data-index="5"
        style="left: 90%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel"
        data-index="5"
        style="left: 90%;"
      >
        90%
      </span>
      <span
        aria-labelledby="discrete-slider-custom"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="5"
        aria-valuetext="5%"
        class="MuiSlider-thumb MuiSlider-thumbColorPrimary PrivateValueLabel-thumb-6"
        data-index="0"
        role="slider"
        style="left: 5%;"
        tabindex="0"
      >
        <span
          class="PrivateValueLabel-offset-8 MuiSlider-valueLabel"
        >
          <span
            class="PrivateValueLabel-circle-9"
          >
            <span
              class="PrivateValueLabel-label-10"
            >
              5
            </span>
          </span>
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`<SpinnerControls /> responds correctly to button clicks 2`] = `
<div>
  <div
    class="interactions_en6gbv"
  >
    <div
      class="buttonsWrapper_1y763qn"
    >
      <div
        aria-label="outlined primary button group"
        class="MuiButtonGroup-root"
        role="group"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-outlinedPrimary"
          id="start"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Start
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-outlinedPrimary"
          id="stop"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Stop
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlinedPrimary MuiButton-outlinedPrimary"
          id="reset"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Reset
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <span
      class="MuiSlider-root MuiSlider-colorPrimary MuiSlider-marked"
      data-testid="internal-slider"
      id="slider"
      role="slider"
    >
      <span
        class="MuiSlider-rail"
      />
      <span
        class="MuiSlider-track"
        style="left: 0%; width: 5%;"
      />
      <input
        type="hidden"
        value="5"
      />
      <span
        class="MuiSlider-mark MuiSlider-markActive"
        data-index="0"
        style="left: 5%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel MuiSlider-markLabelActive"
        data-index="0"
        style="left: 5%;"
      >
        5%
      </span>
      <span
        class="MuiSlider-mark"
        data-index="1"
        style="left: 10%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel"
        data-index="1"
        style="left: 10%;"
      >
        10%
      </span>
      <span
        class="MuiSlider-mark"
        data-index="2"
        style="left: 25%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel"
        data-index="2"
        style="left: 25%;"
      >
        25%
      </span>
      <span
        class="MuiSlider-mark"
        data-index="3"
        style="left: 50%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel"
        data-index="3"
        style="left: 50%;"
      >
        50%
      </span>
      <span
        class="MuiSlider-mark"
        data-index="4"
        style="left: 75%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel"
        data-index="4"
        style="left: 75%;"
      >
        75%
      </span>
      <span
        class="MuiSlider-mark"
        data-index="5"
        style="left: 90%;"
      />
      <span
        aria-hidden="true"
        class="MuiSlider-markLabel"
        data-index="5"
        style="left: 90%;"
      >
        90%
      </span>
      <span
        aria-labelledby="discrete-slider-custom"
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="5"
        aria-valuetext="5%"
        class="MuiSlider-thumb MuiSlider-thumbColorPrimary PrivateValueLabel-thumb-6"
        data-index="0"
        role="slider"
        style="left: 5%;"
        tabindex="0"
      >
        <span
          class="PrivateValueLabel-offset-8 MuiSlider-valueLabel"
        >
          <span
            class="PrivateValueLabel-circle-9"
          >
            <span
              class="PrivateValueLabel-label-10"
            >
              5
            </span>
          </span>
        </span>
      </span>
    </span>
  </div>
</div>
`;
